...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oag-wQ-nNr" userLabel="Like Button">
                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="Like button off"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="likeButtonOn"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked:" destination="LVV-Oi-6b3" eventType="touchUpInside" id="vOH-To-8Bp"/>
                                                    </connections>
                                                </button>
...
                                    <constraint firstAttribute="width" constant="60" id="ipj-4o-4Ws"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cLb-N1-BTh">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Wni-u3-u4o"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="414" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="X6M-dn-flS">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
                                    </imageView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7vR-6a-bck" userLabel="backButton">
                                        <rect key="frame" x="8" y="40" width="48" height="48"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Back"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="48" id="1l6-Wf-f6c"/>
                                            <constraint firstAttribute="height" constant="48" id="rQT-nJ-roQ"/>
                                        </constraints>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" image="Backward"/>
...
