...
        logoutButton.addTarget(self, action: #selector(Self.didTapLogoutButton), for: UIControl.Event.touchUpInside)
        logoutButton.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(logoutButton)
        logoutButton.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor, constant: 55).isActive = true
        logoutButton.leadingAnchor.constraint(greaterThanOrEqualTo: avatarView.trailingAnchor).isActive = true
        logoutButton.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor, constant: -16).isActive = true
        logoutButton.accessibilityIdentifier = "Logout"
    }
    
    @objc
    private func didTapLogoutButton() {
        showAlert()
    }
...
            placeholder: UIImage(named: "userpickStub"),
            options: [.processor(processor)])
    }
    
    func showAlert() {
        guard let alert = self.presenter?.makeAlert() else { return }
        let alertActionYes = UIAlertAction(title: "Да", style: .default) {[weak self] _ in
            guard let self = self else { return }
            self.presenter?.logout()
            self.presenter?.clean()
        }
        let alertActionNo = UIAlertAction(title: "Нет", style: .default) {[weak self] _ in
            guard let self = self else { return }
...
